deployments/ingress-objects/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/upstream-vhost: "k8s-dashboard-kubernetes-dashboard-web.kubernetes-dashboard.svc.cluster.local"
    cert-manager.io/cluster-issuer: selfsigned-ca-issuer
spec:
  tls:
    - hosts:
        - dashboard.k8s.max
      secretName: k8s-max-wildcard-tls
  rules:
    - host: dashboard.k8s.max
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-dashboard-kubernetes-dashboard-web
                port:
                  number: 8000
